--- a/site.css
+++ b/site.css
@@ -7,3 +7,15 @@
 .down {
     color: red;
 }
+
+/* Removes curved border from left of element */
+.remove-left-curves {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+/* Removes curved border from right of element */
+.remove-right-curves {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
